--- a/Views/Traffic/Index.cshtml
+++ b/Views/Traffic/Index.cshtml
@@ -11,7 +11,7 @@
                 </div>
                 <div class="row">
                     <label for="trafficUrl">Randomized Data Stream Origin</label>
-                    <input type="text" class="form-control" id="trafficUrl" value="www.budweisertours.com" placeholder="www.budweisertours.com">
+                    <input type="text" class="form-control" id="trafficUrl" value="pilotflyingj.com/mypilot" placeholder="pilotflyingj.com/mypilot">
                 </div>
                 <div class="row">
                     <label for="trafficUrl">Number Of Messages</label>
